fixed issue with custom theme, added extracttextplugin

--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,7 @@
   ],
   "plugins": [
     ["import", {
-      "libraryName": "antd",
-      "style" : true
+      "libraryName": "antd"
     }]
   ]
 }
