--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
-    "less-vars-to-js": "^1.1.2",
+    "raw-loader": "^0.5.1",
     "style-loader": "^0.18.2"
   }
 }
